--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   },
   "devDependencies": {
     "@sveltejs/kit": "next",
+    "sass": "^1.35.1",
     "svelte": "^3.34.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.7.3",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "js-cookie": "^2.2.1",
+    "socket.io": "^4.1.2",
+    "socket.io-client": "^4.1.2"
+  }
 }
