--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "scripts": {
     "dev": "svelte-kit dev --host",
     "build": "svelte-kit build",
-    "preview": "svelte-kit preview",
+    "preview": "svelte-kit preview --host",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
-    "@sveltejs/kit": "next",
+    "@sveltejs/adapter-node": "^1.0.0-next.35",
+    "@sveltejs/kit": "^1.0.0-next.123",
     "sass": "^1.35.1",
     "svelte": "^3.34.0",
     "svelte-check": "^2.0.0",
