--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "type": "module",
   "dependencies": {
     "js-cookie": "^2.2.1",
+    "mongodb": "^4.1.2",
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2"
   }
