--- a/buzzing/package.json
+++ b/buzzing/package.json
@@ -24,9 +24,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "js-cookie": "^2.2.1",
-    "mongodb": "^4.1.2",
     "socket.io": "^4.1.2",
-    "socket.io-client": "^4.1.2",
-    "xmlhttprequest": "^1.8.0"
+    "socket.io-client": "^4.1.2"
   }
 }
