Added ssl support, changed game state variables

--- a/buzzing/package.json
+++ b/buzzing/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "~TODO~",
+  "name": "Scibowl Buzzing",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev --host",
+    "dev": "svelte-kit dev --host --https",
     "build": "svelte-kit build",
-    "preview": "svelte-kit preview --host",
+    "preview": "svelte-kit preview --host --https",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
     "@sveltejs/adapter-node": "^1.0.0-next.55",
-    "@sveltejs/kit": "^1.0.0-next.184",
+    "@sveltejs/kit": "^1.0.0-next.188",
     "@types/dotenv": "^8.2.0",
     "@types/node-fetch": "^3.0.3",
     "sass": "^1.35.1",
