--- a/home/package.json
+++ b/home/package.json
@@ -23,7 +23,10 @@
   "type": "module",
   "dependencies": {
     "@sveltejs/adapter-node": "^1.0.0-next.68",
+    "@types/jsonwebtoken": "^8.5.8",
+    "argon2": "^0.28.4",
     "dotenv": "^10.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.2"
   }
 }
