--- a/home/package.json
+++ b/home/package.json
@@ -27,6 +27,7 @@
     "argon2": "^0.28.4",
     "dotenv": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.1.2"
+    "mongodb": "^4.1.2",
+    "svelte-select": "^5.0.0-alpha.10"
   }
 }
