--- a/home/package.json
+++ b/home/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "next",
+    "@sveltejs/kit": "^1.0.0-next.278",
     "@types/dotenv": "^8.2.0",
     "sass": "^1.35.1",
     "svelte": "^3.44.0",
