--- a/buzzing/package.json
+++ b/buzzing/package.json
@@ -28,6 +28,7 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "socket.io": "^4.4.1",
-    "socket.io-client": "^4.1.2"
+    "socket.io-client": "^4.1.2",
+    "svelte-select": "^5.0.0-alpha.10"
   }
 }
