--- a/home/package.json
+++ b/home/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.2",
+    "svelte-forms": "^2.2.1",
     "svelte-select": "^5.0.0-alpha.10"
   }
 }
