--- a/home/package.json
+++ b/home/package.json
@@ -11,12 +11,14 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "^1.0.0-next.278",
+    "@sveltejs/kit": "^1.0.0-next.279",
     "@types/dotenv": "^8.2.0",
     "sass": "^1.35.1",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
+    "svelte-forms": "^2.2.1",
     "svelte-preprocess": "^4.10.1",
+    "svelte-select": "^5.0.0-alpha.10",
     "tslib": "^2.3.1",
     "typescript": "~4.5.4"
   },
@@ -27,8 +29,6 @@
     "argon2": "^0.28.4",
     "dotenv": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.1.2",
-    "svelte-forms": "^2.2.1",
-    "svelte-select": "^5.0.0-alpha.10"
+    "mongodb": "^4.1.2"
   }
 }
