--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,10 @@
 .DS_Store
 node_modules
-/db/.svelte-kit
-/buzzing/.svelte-kit
-/ocean/.svelte-kit
+.svelte-kit
+build
 /package
 /buzzing/data
-/db/build
-/buzzing/build
-/ocean/build
-/db/.env
-/buzzing/.env
-/ocean/.env
+.env
 localhost.pem
 localhost-key.pem
 localhost.js
