--- a/db/package.json
+++ b/db/package.json
@@ -9,9 +9,10 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
-    "@sveltejs/adapter-node": "^1.0.0-next.55",
-    "@sveltejs/kit": "^1.0.0-next.184",
+    "@sveltejs/adapter-node": "^1.0.0-next.68",
+    "@sveltejs/kit": "^1.0.0-next.279",
     "@types/dotenv": "^8.2.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node-fetch": "^3.0.3",
     "sass": "^1.35.1",
     "svelte": "^3.44.0",
@@ -24,6 +25,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.2",
     "xmlhttprequest": "^1.8.0"
   }
