--- a/home/package.json
+++ b/home/package.json
@@ -9,9 +9,10 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "^1.0.0-next.406",
+    "@sveltejs/adapter-node": "^1.1.0",
+    "@sveltejs/kit": "^1.0.7",
     "@types/dotenv": "^8.2.0",
+    "@types/jsonwebtoken": "^9.0.0",
     "sass": "^1.35.1",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
@@ -24,11 +25,11 @@
   },
   "type": "module",
   "dependencies": {
-    "@sveltejs/adapter-node": "^1.0.0-next.68",
-    "@types/jsonwebtoken": "^8.5.8",
     "argon2": "^0.28.4",
     "dotenv": "^10.0.0",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^4.1.2"
+    "mongodb": "^4.1.2",
+    "short-unique-id": "^4.4.4",
+    "zod": "^3.20.2"
   }
 }
