--- a/home/package.json
+++ b/home/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "argon2": "^0.28.4",
     "dotenv": "^10.0.0",
+    "env-cmd": "^10.1.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.1.2",
     "short-unique-id": "^4.4.4",
