--- a/home/package.json
+++ b/home/package.json
@@ -25,6 +25,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "argon2": "^0.28.4",
     "dotenv": "^10.0.0",
     "env-cmd": "^10.1.0",
