--- a/buzzing/package.json
+++ b/buzzing/package.json
@@ -2,15 +2,15 @@
   "name": "Scibowl Buzzing",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev --host --https",
-    "build": "svelte-kit build",
-    "preview": "svelte-kit preview --host --https",
+    "dev": "vite dev --host --https",
+    "build": "vite build",
+    "preview": "vite preview --host --https",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
-    "@sveltejs/adapter-node": "^1.0.0-next.68",
-    "@sveltejs/kit": "^1.0.0-next.267",
+    "@sveltejs/adapter-node": "^1.1.0",
+    "@sveltejs/kit": "^1.0.7",
     "@types/dotenv": "^8.2.0",
     "@types/js-cookie": "^3.0.1",
     "@types/jsonwebtoken": "^8.5.8",
@@ -18,15 +18,16 @@
     "sass": "^1.35.1",
     "svelte": "^3.44.0",
     "svelte-check": "^2.0.0",
-    "svelte-preprocess": "^4.9.8",
+    "svelte-preprocess": "^5.0.0",
     "tslib": "^2.0.0",
-    "typescript": "^4.0.0"
+    "typescript": "~4.9.4",
+    "vite": "^4.0.4"
   },
   "type": "module",
   "dependencies": {
     "dotenv": "^10.0.0",
     "js-cookie": "^2.2.1",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.4.1",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.1.2",
