--- a/buzzing/tsconfig.json
+++ b/buzzing/tsconfig.json
@@ -1,8 +1,11 @@
 {
+	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
 		"moduleResolution": "node",
 		"module": "es2020",
-		"lib": ["es2020"],
+		"lib": [
+			"es2020"
+		],
 		"target": "es2019",
 		/**
 			svelte-preprocess cannot figure out whether you have a value or a type, so tell TypeScript
@@ -23,6 +26,7 @@
 		"allowJs": true,
 		"checkJs": true,
 		"paths": {
+			"$lib": ["src/lib"],
 			"$lib/*": ["src/lib/*"]
 		}
 	},
