--- a/home/package.json
+++ b/home/package.json
@@ -18,7 +18,6 @@
     "svelte-check": "^2.2.6",
     "svelte-forms": "^2.2.1",
     "svelte-preprocess": "5.0.0",
-    "svelte-select": "^5.0.0-alpha.10",
     "tslib": "^2.3.1",
     "typescript": "~4.9.0",
     "vite": "^4.0.4"
@@ -32,6 +31,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.1.2",
     "short-unique-id": "^4.4.4",
+    "stripe": "^11.6.0",
+    "svelte-select": "^5.1.3",
     "zod": "^3.20.2"
   }
 }
