--- a/buzzing/package.json
+++ b/buzzing/package.json
@@ -14,7 +14,6 @@
     "@types/dotenv": "^8.2.0",
     "@types/js-cookie": "^3.0.1",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/node-fetch": "^3.0.3",
     "sass": "^1.35.1",
     "svelte": "^3.44.0",
     "svelte-check": "^2.0.0",
@@ -31,6 +30,6 @@
     "mongodb": "^4.4.1",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.1.2",
-    "svelte-select": "^5.0.0-alpha.10"
+    "svelte-select": "^5.1.3"
   }
 }
