--- a/buzzing/package.json
+++ b/buzzing/package.json
@@ -24,7 +24,7 @@
   },
   "type": "module",
   "dependencies": {
-    "dotenv": "^10.0.0",
+    "env-cmd": "^10.1.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.4.1",
