--- a/buzzing/package.json
+++ b/buzzing/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "env-cmd": "^10.1.0",
     "js-cookie": "^2.2.1",
+    "json-2-csv": "^3.20.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.4.1",
     "socket.io": "^4.4.1",
