--- a/buzzing/package.json
+++ b/buzzing/package.json
@@ -24,11 +24,13 @@
   },
   "type": "module",
   "dependencies": {
+    "argon2": "^0.31.0",
     "env-cmd": "^10.1.0",
     "js-cookie": "^2.2.1",
     "json-2-csv": "^3.20.0",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^4.16.0",
+    "short-unique-id": "^4.4.4",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.1.2",
     "svelte-select": "^5.1.3"
