--- a/buzzing/package.json
+++ b/buzzing/package.json
@@ -33,6 +33,7 @@
     "short-unique-id": "^4.4.4",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.1.2",
-    "svelte-select": "^5.1.3"
+    "svelte-select": "^5.1.3",
+    "zod": "^3.22.2"
   }
 }
